<resources>
    <string name="app_name">pcStore</string>
    <string name="category">CATEGORY</string>
    <string name="busket">BUCKET</string>
    <string name="favorites">FAVORITES</string>
    <string name="menu">MENU</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="orders">Orders</string>
    <string name="comparison">Comparison</string>
    <string name="exit">Exit</string>
    <string name="motherboard">Motherboard</string>
    <string name="cpu">CPU</string>
    <string name="videocard">Videocard</string>
    <string name="ram">RAM</string>
    <string name="storage">Storage</string>
    <string name="power">Power</string>
    <string name="cooling">Cooling</string>
    <string name="cases">Cases</string>
    <string name="pc">PC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>