<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    tools:context=".ui.theme.Category">

    <include
        android:id="@+id/toolbarHome"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="712dp"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|top"
        android:layout_marginTop="110dp"
        android:orientation="vertical">


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:columnCount="2"
            android:rowCount="5">

            <ImageButton
                android:id="@+id/button_motherboard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginRight="15dp"
                android:background="@color/purple_dark"
                android:src="@drawable/motherboard" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/motherboard"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/button_cpu"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="15dp"
                android:background="@color/purple_dark"
                android:src="@drawable/core" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/cpu"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/button_videocard"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/videocard" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/videocard"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/button_ram"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/ram" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/ram"
                android:textColor="@color/white"/>
            <ImageButton
                android:id="@+id/button_ssd"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/ssd" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/storage"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/button_power"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/powerunit" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/power"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/button_cooling"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/cooling" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/cooling"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/button_case"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/cases" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="bottom|center"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/cases"
                android:textColor="@color/white" />

            <ImageButton
                android:id="@+id/button_pc"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@color/purple_dark"
                android:src="@drawable/pc" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="bottom|center"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="45dp"
                android:text="@string/pc"
                android:textColor="@color/white"/>


        </GridLayout>


    </ScrollView>

</FrameLayout>